[#76419240] fix navbar strange spacing & remove dotted lines from icons

--- a/scss/_icons.scss
+++ b/scss/_icons.scss
@@ -25,6 +25,12 @@
   // Better Font Rendering
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  &:focus,
+  &:active,
+  &.active {
+    outline: 0 !important;
+  }
 }
 
 .icon-warning:before {
